# mid-task

./: .gitignore  MID1.0_behavioral_0999.csv  MID1_long_trials.csv  MID1_trials.csv  MID2_long_trials.csv  MID2_trials.csv  MID_ED copy.py  MID_ED.py  MID_ED_long.py  MID_ED_long_v2.py  MID_ED_v2.py  MID_public.py  MID_public_Python2.py  MIDpractice_long_trials.csv  MIDpractice_trials.csv  README.md  RunRating.py  RunRating_long.py  hello_world.py  main.py  pyproject.toml
archived/: MID_ED.py  MID_public.py
data/: MID-long-practice_behavioral_XXX000.csv  MID-long-practice_behavioral_XXX000.psydat  MID-practice_behavioral_NEW.csv  MID-practice_behavioral_NEW.psydat  MID-practice_behavioral_NEW_1.psydat  MID-practice_behavioral_XXX000.csv  MID-practice_behavioral_XXX000.psydat  MID-practice_behavioral_XXX001.csv  MID-practice_behavioral_XXX001.psydat  MID-practice_behavioral_XXX999.csv  MID-practice_behavioral_XXX999.psydat  MID1.0_behavioral_0999.psydat  MID1_behavioral_XXX000.csv  MID1_behavioral_XXX000.psydat  MIDpractice_behavioral_XXX000.csv  MIDpractice_behavioral_XXX000.psydat  MIDtest_behavioral_XXX000.csv  MIDtest_behavioral_XXX000.psydat  RunRating-long_XXX001.csv  RunRating-long_XXX001.psydat  RunRating_XXX001.csv  RunRating_XXX001.psydat
docs/: development.md  usage.md
sequences/: practice.csv  run_1.csv  run_2.csv
src/mid/: __init__.py  __main__.py  config.py  display.py  quest.py  recorder.py  scanner.py  session.py  staircase.py  trial.py
tests/: test_mid.py
text/: instr_arousal.txt  instr_description.txt  instr_rating.txt  instr_valence.txt  instructions_MID.txt  instructions_ratings.txt
