[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mid-task"
version = "2.0.0"
description = "Monetary Incentive Delay Task - PsychoPy implementation for fMRI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eden Z. Deng" }, { name = "Eric Wang" }]
dependencies = [
    "psychopy>=2025.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "rich>=14.3.3",
    "mcculw>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mid-task = "mid.__main__:run"

[tool.setuptools.packages.find]
where = ["src"]
